--- a/whimsical/styles/default.css
+++ b/whimsical/styles/default.css
@@ -19,22 +19,6 @@
     --main-bg: #f5f5f5;
 }
 
-body {
-    color: var(--primary-dark);
-/*     background-color: var(--primary-light); */
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: 0;
-    background-image: url('../images/8o2hys8o2hys8o2h.jpg');
-    background-size: cover; /* Fill the entire page */
-    background-repeat: no-repeat; /* Prevent image repetition */
-    background-attachment: fixed; /* Keep image fixed during scrolling */
-    margin: 0; /* Remove default body margin */
-}
-
-h1, h2, h3, h4, h5, h6 {
-    color: var(--primary-dark);
-}
-
 a {
     color: var(--accent-blue);
     text-decoration: none;
@@ -45,91 +29,41 @@ a:hover {
     text-decoration: underline;
 }
 
-.header, .footer {
-    background-color: var(--header-footer-bg);
-    color: var(--primary-medium);
-    border-bottom: 1px solid var(--accent-grey);
-    border-top: 1px solid var(--accent-grey);
-    padding: 10px 20px 10px;
-}
-
-.header nav, .footer nav {
-    background-color: var(--nav-bg);
-    border-radius: 5px;
-    padding: 5px;
-    margin: 5px 0;
-}
-
-.header nav ul, .footer nav ul {
-    list-style: none;
-    padding: 0;
+body {
+    background-attachment: fixed;
+    background-image: url('../images/8o2hys8o2hys8o2h.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: var(--primary-dark);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    align-items: center;
-    padding-inline-start: 0;
-    margin-block: 0;
-    height: 100%;
 }
 
-.header nav li, .footer nav li {
-    margin: 0 0.2rem;
-    padding: 0.3rem 0.6rem;
-    display: block;
-    color: var(--nav-list-item-color);
-}
-
-.header nav li:hover, .footer nav li:hover {
-    background-color: var(--nav-list-item-hover-bg);
-    color: var(--nav-list-item-hover-color);
-    cursor: pointer;
-}
-
-.header nav a, .footer nav a {
-    color: inherit;
-    text-decoration: none;
-}
-
-.header nav a:hover, .footer nav a:hover {
-    color: var(--nav-list-item-hover-color);
-    text-decoration: none;
-}
-
-button, .cta-button {
+button,
+.cta-button {
     background-color: var(--accent-blue);
-    color: white;
     border: none;
-    padding: 10px 20px;
     border-radius: 5px;
+    color: white;
     cursor: pointer;
+    padding: 10px 20px;
 }
 
-button:hover, .cta-button:hover {
+button:hover,
+.cta-button:hover {
     background-color: #2980B9;
 }
 
-.card, .section {
-    box-sizing: border-box;
-    background-color: var(--section-bg);
-    border: 1px solid var(--accent-grey);
-    padding: 30px 20px;
-    margin-bottom: 20px;
-    max-width: 780px;
-    margin: 20px auto;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.highlight {
-    color: var(--accent-blue);
+.bartholomew-quote {
+    border-left: 3px solid var(--accent-grey);
+    color: var(--primary-medium);
+    font-style: italic;
+    margin-top: 20px;
+    padding-left: 20px;
 }
 
 .border-bottom {
     border-bottom: 1px solid var(--accent-grey);
-}
-
-.border-top {
-    border-top: 1px solid var(--accent-grey);
 }
 
 .border-left {
@@ -140,72 +74,101 @@ button:hover, .cta-button:hover {
     border-right: 1px solid var(--accent-grey);
 }
 
-.grey-text {
-    color: var(--primary-medium);
+.border-top {
+    border-top: 1px solid var(--accent-grey);
 }
 
-.green-text {
-    color: var(--accent-green);
-}
-
-orange-text {
-    color: var(--accent-orange);
-}
-
-teal-text {
-    color: var(--accent-teal);
-}
-
-.container, .header, .footer, main {
+.card,
+.section {
+    background-color: var(--section-bg);
+    border: 1px solid var(--accent-grey);
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-sizing: border-box;
+    margin: 20px auto;
+    margin-bottom: 20px;
     max-width: 780px;
-    margin: 0 auto;
-    padding: 0 20px;
-    box-sizing: border-box;
+    padding: 30px 20px;
 }
 
-@media (max-width: 768px) {
-    .container, .header, .footer, .section, main {
-        padding: 0 10px;
-    }
-}
-
+.container,
+.header,
+.footer,
 main {
-    padding: 10px 10px;
     box-sizing: border-box;
-    background-color: var(--main-bg);
+    margin: 0 auto;
+    max-width: 780px;
+    padding: 0 20px;
 }
 
-main h2 {
-    margin-bottom: 15px;
+.footer {
+    border-top: 1px solid var(--accent-grey);
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    background-color: var(--header-footer-bg);
+    color: var(--primary-medium);
+    padding: 10px 20px 10px;
 }
 
-main p {
-    line-height: 1.6;
-    margin-bottom: 15px;
+.footer nav {
+    background-color: var(--nav-bg);
+    border-radius: 5px;
+    margin: 5px 0;
+    padding: 5px;
 }
 
-main ul {
-    list-style-type: disc;
-    margin-left: 20px;
-    margin-bottom: 15px;
+.footer nav a {
+    color: inherit;
+    text-decoration: none;
 }
 
-main ol {
-    list-style-type: decimal;
-    margin-left: 20px;
-    margin-bottom: 15px;
+.footer nav a:hover {
+    color: var(--nav-list-item-hover-color);
+    text-decoration: none;
 }
 
-main img {
-    max-width: 100%;
-    height: auto;
+.footer nav li {
+    color: var(--nav-list-item-color);
     display: block;
-    margin: 15px auto;
+    margin: 0 0.2rem;
+    padding: 0.3rem 0.6rem;
 }
 
-gap-div {
-    height: 20px;
+.footer nav li:hover {
+    background-color: var(--nav-list-item-hover-bg);
+    color: var(--nav-list-item-hover-color);
+    cursor: pointer;
+}
+
+.footer nav ul {
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    height: 100%;
+    justify-content: space-evenly;
+    list-style: none;
+    margin: 0;
+    margin-block: 0;
+    padding: 0;
+    padding-inline-start: 0;
+}
+
+.footer-bottom-links {
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.footer-bottom-links span,
+.footer-bottom-links a {
+    margin: 0 5px;
+    white-space: nowrap;
+}
+
+.gap-div {
     background-color: transparent;
+    height: 20px;
 }
 
 .gap-div.separator {
@@ -214,113 +177,103 @@ gap-div {
     margin: 5px 0;
 }
 
-.profile-container {
+.green-text {
+    color: var(--accent-green);
+}
+
+.grey-text {
+    color: var(--primary-medium);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    color: var(--primary-dark);
+}
+
+h2 {
+    margin-bottom: 15px;
+}
+
+.header {
+    background-color: var(--header-footer-bg);
+    border-bottom: 1px solid var(--accent-grey);
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    color: var(--primary-medium);
+    padding: 10px 20px 10px;
+}
+
+.header nav {
+    background-color: var(--nav-bg);
+    border-radius: 5px;
+    margin: 5px 0;
+    padding: 5px;
+}
+
+.header nav a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.header nav a:hover {
+    color: var(--nav-list-item-hover-color);
+    text-decoration: none;
+}
+
+.header nav li {
+    color: var(--nav-list-item-color);
+    display: block;
+    margin: 0 0.2rem;
+    padding: 0.3rem 0.6rem;
+}
+
+.header nav li:hover {
+    background-color: var(--nav-list-item-hover-bg);
+    color: var(--nav-list-item-hover-color);
+    cursor: pointer;
+}
+
+.header nav ul {
+    align-items: center;
     display: flex;
-    align-items: flex-start;
-    max-width: 780px;
-    margin: 20px auto;
-    border: 1px solid var(--accent-grey);
-    padding: 20px;
-    box-sizing: border-box;
-    background-color: var(--profile-bg);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    flex-wrap: wrap;
+    height: 100%;
+    justify-content: space-evenly;
+    list-style: none;
+    margin: 0;
+    margin-block: 0;
+    padding: 0;
+    padding-inline-start: 0;
 }
 
-.profile-image {
-    flex: 0 0 150px;
-    margin-right: 20px;
+.header-main-gap {
+    background-color: transparent;
+    height: 20px;
 }
 
-.profile-image img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 50%;
-}
-
-.profile-text {
-    flex: 1;
-}
-
-.profile-text p {
-    margin-bottom: 10px;
-    line-height: 1.6;
-}
-
-.profile-bottom-text {
-    text-align: center;
-    margin-top: 20px;
-    font-style: italic;
-    color: var(--primary-medium);
-}
-
-@media (max-width: 500px) {
-    .profile-container {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .profile-image {
-        margin-right: 0;
-        margin-bottom: 15px;
-    }
-
-    .profile-text {
-        text-align: center;
-    }
-}
-
-.bartholomew-quote {
-    font-style: italic;
-    color: var(--primary-medium);
-    margin-top: 20px;
-    padding-left: 20px;
-    border-left: 3px solid var(--accent-grey);
-}
-
-.footer-bottom-links {
-    display: flex; /* Use flexbox to align items in a row */
-    align-items: center; /* Vertically align items */
-    justify-content: center; /* Horizontally center items */
-    flex-wrap: wrap; /* Allow wrapping on smaller screens */
-}
-
-.footer-bottom-links span,
-.footer-bottom-links a {
-    margin: 0 5px; /* Add spacing between items */
-    white-space: nowrap; /* Prevent text from wrapping */
+.highlight {
+    color: var(--accent-blue);
 }
 
 #validation_link_html img {
-    height: 20px;
-    width: auto;
-    vertical-align: middle;
+height: 20px;
+vertical-align: middle;
+width: auto;
 }
+
+main {
+    background-color: var(--main-bg);
+    border-radius: 10px;
+    box-sizing: border-box;
+    padding: 10px 10px;
+}
+
 main div,
 .section div {
-    margin-bottom: 15px; /* Add space between paragraphs */
-    line-height: 1.6; /* Add line height for readability */
+    line-height: 1.6;
+    margin-bottom: 15px;
 }
-.section div:last-child {
-    margin-bottom: 0; /* Remove bottom margin from the last paragraph */
-}
-.header-main-gap {
-    height: 20px; /* Adjust height as needed */
-    background-color: transparent; /* Or any other color you prefer */
-}
-.header {
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-}
-
-.footer {
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-}
-
-main, .section {
-    border-radius: 10px;
-}
-.profile-container {
-    border-radius: 10px; /* Rounds all four corners of the profile container */
-}
-
